--- a/configuration/templates/page/contact.hbs
+++ b/configuration/templates/page/contact.hbs
@@ -5,7 +5,7 @@
   {{#if @root.data.accountInfo.postcode ~}}
   {{> local_contact_info}}
   <div class="columns col-gapless">
-    <div class="column col-6 col-sm-9">
+    <div class="column col-4 col-xl-5 col-lg-6 col-md-5 col-sm-7 col-xs-9">
       {{> local_contact_logo}}
     </div>
   </div>
