--- a/configuration/templates/account/auth/user-body-update.hbs
+++ b/configuration/templates/account/auth/user-body-update.hbs
@@ -5,7 +5,7 @@
       {{#if @root.data.codeRequired}}
         {{{json key='verification_code' value=code}}},
         {{{json key='verification_email' value=verification_email}}},
-        {{#json key='verification_url' type="text"}}{{@root.context.metaData.url}}/user-approval/?code={{code}}&user_id={{external_id}}{{/json}},
+        {{#json key='verification_url' type="text"}}https://{{@root.request.headers.host}}/user-approval/?code={{code}}&user_id={{external_id}}{{/json}},
         {{#json key='verification_needed' type="boolean"}}true{{/json}},
       {{else}}
         "verification_needed" : false, {{!-- Hack - it's not possible to enter false in the json parser due to a bug --}}
