pass/fail messaging improvements

--- a/configuration/templates/volunteering/verify-hours-fail.hbs
+++ b/configuration/templates/volunteering/verify-hours-fail.hbs
@@ -1,9 +1,12 @@
 <div class="empty">
-  <div class="empty-icon">
-    <span class="fal fa-user-clock fa-3x"></span>
+  <div class="empty-icon text-error">
+    <span class="fal fa-user-times fa-3x"></span>
   </div>
   <p class="empty-title h5">Volunteering verification</p>
   <p class="empty-subtitle">
-    Verification has failed. Please <a href="mailto:{{>support_email_address}}">contact us</a> for assistance.
+    <strong>Volunteering hours could not be verified.</strong> This may be because the hours have already been verified.
+  </p>
+  <p class="empty-subtitle">
+    Please <a href="/contact">contact us</a> if you think this is incorrect.
   </p>
 </div>
