--- a/configuration/templates/volunteering/verify-hours-pass.hbs
+++ b/configuration/templates/volunteering/verify-hours-pass.hbs
@@ -1,5 +1,5 @@
 <div class="empty">
-  <div class="empty-icon">
+  <div class="empty-icon text-success">
     <span class="fal fa-user-check fa-3x"></span>
   </div>
   <p class="empty-title h5">Volunteering verification</p>
