--- a/configuration/templates/page/contact.hbs
+++ b/configuration/templates/page/contact.hbs
@@ -3,9 +3,11 @@
     Local enquiries
   </h2>
   {{#if @root.data.accountInfo.postcode ~}}
-  {{> local_contact_info}}
-  <div class="columns col-gapless">
-    <div class="column col-4 col-xl-5 col-lg-6 col-md-5 col-sm-7 col-xs-9">
+  <div class="columns">
+    <div class="column col-9 col-xl-8 col-lg-7 col-md-12">
+      {{> local_contact_info}}
+    </div>
+    <div class="column col-3 col-xl-4 col-lg-5 col-md-6 col-sm-7 col-xs-9">
       {{> local_contact_logo}}
     </div>
   </div>
@@ -14,7 +16,7 @@
     For information on how to get involved with the {{@root.context.metaData.title}}, you're best to contact your local Third Sector Interface.
   </p>
   <p>
-    Find the contact details below for the Council area you live in.
+    Find the contact details below for the council area you live in.
   </p>
   {{/if ~}}
   {{#unless @root.data.accountInfo.postcode ~}}
@@ -67,6 +69,6 @@
     National enquiries
   </h2>
   <p>
-    If you have a problem with the website or are a national organisation, please contact <a href="mailto:{{@root.context.metaData.contacts.admin}}">{{@root.context.metaData.contacts.admin}}</a>.
+    If you represent a national organisation or encounter an error or bug with the website, please contact <a href="mailto:{{@root.context.metaData.contacts.admin}}">{{@root.context.metaData.contacts.admin}}</a>.
   </p>
 </div>
