--- a/src/main.scss
+++ b/src/main.scss
@@ -307,6 +307,9 @@ a.btn-link:hover {
     padding: 0;
   }
 }
+.form-horizontal .form-horizontal {
+  padding: 0;
+}
 
 .content-primary-info-container.tabs {
   .tab {
