--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -23,7 +23,7 @@
                 {{#if @root.data.isAdmin ~}}
                 Organisation your group has volunteered with
                 {{else}}
-                Organisation you volunteer for
+                Organisation you volunteer with
                 {{/if ~}}
               </label>
             </div>
