--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -13,6 +13,20 @@
       {{> log_age_limit}}
       {{/unless ~}}
 
+      {{!-- <div class="bg-warning x-padding"> --}}
+        <h4 class="no-margin">Checklist: What is volunteering?</h4>
+        <ul class="fa-ul">
+          <li>
+            <span class="fa-li"><span class="far fa-check-circle text-success"></span></span>
+            <span class="text-grey">Volunteering is a choice to give time or energy, of one's own free will, and a choice not motivated for financial gain or for a wage or salary.</span>
+          </li>
+          <li>
+            <span class="fa-li"><span class="far fa-times-circle text-error"></span></span>
+            <span class="text-grey">Paid internships, etc. [Need improved text]</span>
+          </li>
+        </ul>
+      {{!-- </div> --}}
+
       <form id="task-details-form" class="active-form" action="/submit-task-details" method="POST" data-component="TasksTrigger" {{#if @root.data.isAdmin}}data-success-destination="/hours/" data-destination-include-id="true"{{else}}data-success-destination="/hours"{{/if}} data-TasksTrigger="ajax-form-handler">
         <input type="hidden" name="task_type" value="{{#if @root.data.isAdmin}}Group Task{{else}}Individual Task{{/if}}">
         <div class="l-margin r-margin">
