--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -61,6 +61,11 @@
 </head>
 <body>
   <site>
+    {{#unless (contains request.url.hostname ".local") ~}}
+    <div class="text-white bg-warning text-centre v-padding">
+      This website is currently in development, but it will send emails so please only use your own email addresses when testing
+    </div>
+    {{/unless ~}}
     <div class="page">
     {{#ifAny request.params.query.debug (contains request.url.hostname ".local") ~}}
       {{#if errors.[0]}}
