--- a/configuration/partials/log-age-limit.hbs
+++ b/configuration/partials/log-age-limit.hbs
@@ -1,3 +1,7 @@
+{{#compare (dateMath 'now-28y') ">" (moment @root.data.accountInfo.date_of_birth "YYYY-MM-DD") ~}}
+<strong class="label label-error">You cannot log hours as you are over the age limit for the {{@root.context.metaData.title}}</strong>
+{{else}}
 {{#compare (dateMath 'now-26y') ">" (moment @root.data.accountInfo.date_of_birth "YYYY-MM-DD") ~}}
 <strong class="label label-warning">You may only log hours you volunteered before you turned 26</strong>
+{{/compare ~}}
 {{/compare ~}}
