--- a/configuration/templates/error/500.hbs
+++ b/configuration/templates/error/500.hbs
@@ -6,7 +6,7 @@
   <p class="empty-subtitle">Please try again, but contact us if the problem persists.</p>
   <div class="empty-action">
     <a href="/" class="btn btn-primary">Home</a>
-    <a href="mailto:{{> support_email_address}}" class="btn">Contact us</a>
+    <a href="mailto:{{> support_email_address}}" class="btn btn-link">Contact us</a>
   </div>
   <pre class="code">
     <code>
