--- a/configuration/templates/page/home-authenticated.hbs
+++ b/configuration/templates/page/home-authenticated.hbs
@@ -26,7 +26,9 @@
   </p>
   {{/compare ~}}
   <div class="empty-action">
+    {{#unless (compare (dateMath 'now-28y') ">" (moment @root.data.accountInfo.date_of_birth "YYYY-MM-DD")) ~}}
     <a href="/hours" class="btn btn-primary">My volunteering - log hours</a>
+    {{/unless ~}}
     <a href="/search" class="btn btn-link">Find a new volunteering opportunity</a>
   </div>
   {{/if ~}}
