--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -18,10 +18,10 @@
   <div class="columns">
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       <h2 class="text-center">
-        {{#if @last}}My{{else}}Current{{/if}} achievement
+        {{#if in_progress}}Current{{else}}My{{/if}} achievement
       </h2>
-      <p class="text-center text-primary">
-        <strong>{{type_name}}: {{certificate_name}} hours</strong>
+      <p class="text-center text-dark h5">
+        {{type_name}}: {{certificate_name}} hours
       </p>
       {{> badge type=type key=(slugify certificate_name) hours=hours}}
       <div class="text-center description">
@@ -39,8 +39,8 @@
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       {{!-- It's being verified --}}
       <h2 class="text-center">Next achievement</h2>
-      <p class="text-center text-primary">
-        <strong>{{type_name}}: {{certificate_name}} hours</strong>
+      <p class="text-center text-dark h5">
+        {{type_name}}: {{certificate_name}} hours
       </p>
       {{> badge type=type key=(slugify certificate_name) hours=hours disabled=true}}
       <div class="text-center description">
@@ -63,8 +63,8 @@
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       {{!-- It's ready to claim--}}
       <h2 class="text-center">Next achievement</h2>
-      <p class="text-center text-primary">
-        <strong>{{type_name}}: {{certificate_name}} hours</strong>
+      <p class="text-center text-dark h5">
+        {{type_name}}: {{certificate_name}} hours
       </p>
       {{> badge type=type key=(slugify certificate_name) hours=hours disabled=true}}
       <p class="text-center description">
@@ -80,8 +80,8 @@
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       {{!-- It's not there yet --}}
       <h2 class="text-center">Working towards</h2>
-      <p class="text-center text-primary">
-        <strong>{{type_name}}: {{certificate_name}} hours</strong>
+      <p class="text-center text-dark h5">
+        {{type_name}}: {{certificate_name}} hours
       </p>
       {{> badge type=type key=(slugify certificate_name) hours=hours disabled=true}}
       <div class="text-center description">
