approval wording improvement

--- a/configuration/templates/account/auth/sign-up-admin.hbs
+++ b/configuration/templates/account/auth/sign-up-admin.hbs
@@ -3,7 +3,7 @@
     Group administrator sign up
   </h2> -->
   <div class="l-margin r-margin">
-    <div id="sign-up-message">
+    <div class="bg-error s-rounded x-padding v-margin" id="sign-up-message">
       <span id="form-message"></span>
     </div>
   </div>
