--- a/configuration/templates/account/auth/approval-pass.hbs
+++ b/configuration/templates/account/auth/approval-pass.hbs
@@ -2,8 +2,8 @@
   <div class="empty-icon text-success">
     <span class="fal fa-user-check fa-3x"></span>
   </div>
-  <p class="empty-title h5">{{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} account approval</p>
+  <p class="empty-title h5">{{#compare @root.data.accountInfo.user_type "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} account approval</p>
   <p class="empty-subtitle">
-    Approval successful. {{@root.data.accountInfo.first_name}} will now be able to use all the features of this site.
+    Approval successful. {{@root.data.accountInfo.first_name}} will now be able to {{#compare @root.data.accountInfo.user_type "Volunteer"}}use all the features of this site{{else}}create {{@root.context.metaData.title}} certificates for groups{{/compare}}.
   </p>
 </div>
